# git-manager

./: .gitignore
git-gui/: package-lock.json  package.json  vite.config.ts
git-gui/src/: App.tsx  index.css
git-gui/src-tauri/: Cargo.toml  tauri.conf.json
git-gui/src-tauri/icons/: icon.icns
git-gui/src-tauri/src/: error.rs  main.rs  state.rs
git-gui/src-tauri/src/commands/: branch.rs  commit.rs  git_ops.rs  log.rs  mod.rs  repo.rs  status.rs
git-gui/src/components/: ChangesPanel.tsx  CommitForm.tsx  CommitList.tsx  DiffViewer.tsx  RepoHeader.tsx  RepoOpenDialog.tsx
git-gui/src/store/: repoStore.ts
